# Schro2D

./: .gitignore  CMakeLists.txt  README.md
shaders/: schro.glsl
src/: main.cpp  schro.cpp  schro.hpp
src/shaders/: grad.comp  schro.comp
